--- a/public/directives/todoList.html
+++ b/public/directives/todoList.html
@@ -4,9 +4,18 @@
 		<md-toolbar layout layout-align="center center">
 			<h2>To-Do List</h2>
 		</md-toolbar>
-		<md-content>
+		<md-toolbar class="md-accent md-hue-1 md-padding" layout="column">
+			<form ng-submit="submit({ desc: newTodo }); newTodo = '';" layout="row" flex="5">
+				<md-input-container flex>
+					<label>Todo</label>
+					<input type="text" ng-model="newTodo"/>
+				</md-input-container>
+				<md-button class="md-raised md-primary" type="submit">Submit</md-button>
+			</form>
+		</md-toolbar>
+		<md-content layout="column" class="md-padding">
 		    <md-list flex>
-		    	<md-list-item class="md-1-line" ng-repeat="todo in todos" ng-click="null">
+		    	<md-list-item class="md-1-line" ng-repeat="todo in todos track by todo._id" ng-click="todo.isDone = !todo.isDone">
 		    		<md-checkbox ng-model="todo.isDone"></md-checkbox>
 		    		<p>{{ todo.todo }}</p>
 		    		<md-icon>attachment</md-icon>
