made list responsive

--- a/public/directives/todoList.html
+++ b/public/directives/todoList.html
@@ -1,5 +1,5 @@
 <div class="container" layout="column" layout-align="center center">
-	<md-whiteframe class="md-whiteframe-14dp" flex="50" layout="column" layout-align="start center">
+	<md-whiteframe class="md-whiteframe-14dp" flex-xs="100" flex-gt-xs="50" layout="column" layout-align="start center">
 		<md-toolbar layout layout-align="center center">
 			<div flex="5"></div>
 			<h2>To-Do List</h2>
