fixed radio button styling

--- a/public/directives/todoList.html
+++ b/public/directives/todoList.html
@@ -16,7 +16,7 @@
 				</md-input-container>
 				<md-button class="md-raised md-primary" type="submit">Submit</md-button>
 			</form>
-			<md-radio-group layout="row" ng-model="q.isDone">
+			<md-radio-group class="md-padding" layout="row" ng-model="q.isDone">
 				<div flex="5"></div>
 				<md-radio-button ng-value="">All</md-radio-button>
 				<md-radio-button ng-value="true">Done</md-radio-button>
